# FLUXHLS

./: .gitignore  CMakeLists.txt  README.md  main.cpp
docs/: stage1.md  stage2.md  stage3.md  stage4.md  stage5.md  stage6.md
scripts/: setup_ubuntu.sh
stage1/: Dumper.cpp  Dumper.h  Frontend.cpp  Frontend.h  HLSContext.h  Pragma.h
stage2/: AffineAnalysis.cpp  AffineAnalysis.h  AffineContext.h
stage3/: ScheduleContext.h  Scheduler.cpp  Scheduler.h
stage4/: Binder.cpp  Binder.h  BindingContext.h
stage5/: InterfaceContext.h  InterfaceSynth.cpp  InterfaceSynth.h
stage6/: RTLContext.h  RTLEmitter.cpp  RTLEmitter.h
test/: conv2d.cpp  fir.cpp  matmul.cpp  vadd.cpp
